--- a/public/style.css
+++ b/public/style.css
@@ -81,3 +81,27 @@ h1 {
 .add:hover {
     color: #f4ffff;
 }
+
+.modal{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+}
+
+.modal .container{
+    width: 404px;
+    height: 512px;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    box-sizing: border-box;
+    /* border-radius: 6px; */
+    padding: 1em;    
+}
